--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
         <nav class="header-nav">
           <a href="#" class="link logo header-logo">Web<span class="logo_header">Studio</span></a>
           <ul class="list header-list">
-            <li><a href="index.html" class="link header-link current">Студия</a></li>
-            <li><a href="portfolio.html" class="link header-link">Портфолио</a></li>
-            <li><a href="#" class="link header-link">Контакты</a></li>
+            <li class="header-link">
+              <a href="index.html" class="header-link link current">Студия</a>
+            </li>
+            <li class="header-link">
+              <a href="portfolio.html" class="header-link link">Портфолио</a>
+            </li>
+            <li class="header-link"><a href="#" class="header-link link">Контакты</a></li>
           </ul>
         </nav>
         <ul class="header-contacts-list list">
