--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         <nav class="header-nav">
           <a href="#" class="link logo header-logo">Web<span class="logo_header">Studio</span></a>
           <ul class="list header-list">
-            <li class="header-link">
+            <li class="header-item">
               <a href="index.html" class="header-link link current">Студия</a>
             </li>
-            <li class="header-link">
+            <li class="header-item">
               <a href="portfolio.html" class="header-link link">Портфолио</a>
             </li>
-            <li class="header-link"><a href="#" class="header-link link">Контакты</a></li>
+            <li class="header-item"><a href="#" class="header-link link">Контакты</a></li>
           </ul>
         </nav>
         <ul class="header-contacts-list list">
