--- a/portfolio.html
+++ b/portfolio.html
@@ -28,10 +28,10 @@
           <a href="#" class="link logo header-logo">Web<span class="logo_header">Studio</span></a>
           <ul class="list header-list">
             <li class="header-item">
-              <a href="index.html" class="header-link link current">Студия</a>
+              <a href="index.html" class="header-link link">Студия</a>
             </li>
             <li class="header-item">
-              <a href="portfolio.html" class="header-link link">Портфолио</a>
+              <a href="portfolio.html" class="header-link link current">Портфолио</a>
             </li>
             <li class="header-item"><a href="#" class="header-link link">Контакты</a></li>
           </ul>
