--- a/index.html
+++ b/index.html
@@ -401,34 +401,46 @@
         <h2 class="title clients-title">Постоянные клиенты</h2>
         <ul class="list clients-list">
           <li class="clients-box">
-            <svg class="clients-icon" width="106px" height="60px">
-              <use href="./images/icons.svg#icon-yaco"></use>
-            </svg>
+            <a href="#" class="clients-link link">
+              <svg class="clients-icon" width="106px" height="60px">
+                <use href="./images/icons.svg#icon-yaco"></use>
+              </svg>
+            </a>
           </li>
           <li class="clients-box">
-            <svg class="clients-icon" width="106px" height="60px">
-              <use href="./images/icons.svg#icon-company-one"></use>
-            </svg>
+            <a href="#" class="clients-link link">
+              <svg class="clients-icon" width="106px" height="60px">
+                <use href="./images/icons.svg#icon-company-one"></use>
+              </svg>
+            </a>
           </li>
           <li class="clients-box">
-            <svg class="clients-icon" width="106px" height="60px">
-              <use href="./images/icons.svg#icon-company-two"></use>
-            </svg>
+            <a href="#" class="clients-link link">
+              <svg class="clients-icon" width="106px" height="60px">
+                <use href="./images/icons.svg#icon-company-two"></use>
+              </svg>
+            </a>
           </li>
           <li class="clients-box">
-            <svg class="clients-icon" width="106px" height="60px">
-              <use href="./images/icons.svg#icon-foster"></use>
-            </svg>
+            <a href="#" class="clients-link link">
+              <svg class="clients-icon" width="106px" height="60px">
+                <use href="./images/icons.svg#icon-foster"></use>
+              </svg>
+            </a>
           </li>
           <li class="clients-box">
-            <svg class="clients-icon" width="106px" height="60px">
-              <use href="./images/icons.svg#icon-brand"></use>
-            </svg>
+            <a href="#" class="clients-link link">
+              <svg class="clients-icon" width="106px" height="60px">
+                <use href="./images/icons.svg#icon-brand"></use>
+              </svg>
+            </a>
           </li>
           <li class="clients-box">
-            <svg class="clients-icon" width="106px" height="60px">
-              <use href="./images/icons.svg#icon-tagline"></use>
-            </svg>
+            <a href="#" class="clients-link link">
+              <svg class="clients-icon" width="106px" height="60px">
+                <use href="./images/icons.svg#icon-tagline"></use>
+              </svg>
+            </a>
           </li>
         </ul>
       </div>
@@ -463,7 +475,7 @@
           </address>
         </div>
         <div class="footer-right">
-          <p class="footer-right-txt">присоединяйтесь</p>
+          <p class="footer-right-txt">ПРИСОЕДЕНЯЙТЕСЬ</p>
           <ul class="list footer-soc-list">
             <li class="footer-soc-item">
               <a href="https://www.instagram.com/" class="link footer-soc-link">
