--- a/portfolio.html
+++ b/portfolio.html
@@ -238,7 +238,7 @@
           </address>
         </div>
         <div class="footer-right">
-          <p class="footer-right-txt">присоединяйтесь</p>
+          <p class="footer-right-txt">ПРИСОЕДЕНЯЙТЕСЬ</p>
           <ul class="list footer-soc-list">
             <li class="footer-soc-item">
               <a href="https://www.instagram.com/" class="link footer-soc-link">
