--- a/portfolio.html
+++ b/portfolio.html
@@ -215,8 +215,8 @@
         <div class="footer-left">
           <a href="#" class="link logo">Web<span class="logo-footer">Studio</span></a>
           <address class="footer-address">
-            <ul class="list footer-link">
-              <li>
+            <ul class="list">
+              <li class="footer-link">
                 <a
                   href="https://goo.gl/maps/LpoyLTCjpwuNHQXE9"
                   target="_blank"
@@ -224,12 +224,12 @@
                   >г. Киев, пр-т Леси Украинки, 26</a
                 >
               </li>
-              <li>
+              <li class="footer-link">
                 <a href="email:info@example.com" class="link footer-contacts footer-item"
                   >info@example.com</a
                 >
               </li>
-              <li>
+              <li class="footer-link">
                 <a href="tel:+380991111111" class="link footer-contacts footer-item"
                   >+38 (096) 111 11 11</a
                 >
@@ -242,29 +242,29 @@
           <ul class="list footer-soc-list">
             <li class="footer-soc-item">
               <a href="https://www.instagram.com/" class="link footer-soc-link">
-                <svg class="footer-soc-icon">
-                  <use href="./images/icons.svg#icon-instagram" width="20px" height="20px"></use>
+                <svg class="footer-soc-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-soc-item">
               <a href="https://twitter.com/" class="link footer-soc-link">
-                <svg class="footer-soc-icon">
-                  <use href="./images/icons.svg#icon-twitter" width="20px" height="20px"></use>
+                <svg class="footer-soc-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-soc-item">
               <a href="https://www.facebook.com/" class="link footer-soc-link">
-                <svg class="footer-soc-icon">
-                  <use href="./images/icons.svg#icon-facebook" width="20px" height="20px"></use>
+                <svg class="footer-soc-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-soc-item">
               <a href="https://ru.linkedin.com/" class="link footer-soc-link">
-                <svg class="footer-soc-icon">
-                  <use href="./images/icons.svg#icon-linkedin" width="20px" height="20px"></use>
+                <svg class="footer-soc-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
